Last trades view implemented

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,7 +45,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>Current round</string>
+          <string>Last round</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignBottom|Qt::AlignHCenter</set>
